--- a/CSS/style.css
+++ b/CSS/style.css
@@ -137,6 +137,16 @@
         background-position: 0% 50%;
     }
 }
+/* 确保黑色背景始终在最底层 */
+.NO {
+    position: fixed; /* 或者 absolute，取决于布局需求 */
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: black; /* 设置背景颜色为黑色 */
+    z-index: -1; /* 确保它在所有其他元素之下 */
+}
 
 /* 全局光标设置 */
 
@@ -165,4 +175,14 @@
     height: 450px;
 }
 
-/* ... 其他CSS规则 ... 
+#audioVisualization {
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 100%; /* 确保这个高度与你的canvas高度一致 */
+    z-index: 5; /* 确保canvas位于其他元素之上 */
+    pointer-events: none;
+}
+
+
