--- a/CSS/style.css
+++ b/CSS/style.css
@@ -144,6 +144,19 @@
     background-color: rgb(255, 255, 255);
     transform: rotate(-10deg); /* 修改为更小的角度 */
 }
+.g {
+    width: 100px; /* 设置宽度 */
+    height: 100px; /* 设置高度 */
+    border-radius: 50%; /* 设置圆角，使其变成圆形 */
+    background-color: #ff0000; /* 设置背景颜色 */
+    position: absolute; /* 使用绝对定位 */
+    top: 50%; /* 垂直居中 */
+    left: 826px; /* 水平居中 */
+    transform: translate(-50%, -50%); /* 通过平移自身的一半宽度和高度来实现真正的居中 */
+    position: fixed; 
+    z-index: -0;
+}
+
 .NOV{    width: 0px;
     height: 716px;}
 
@@ -167,7 +180,7 @@
     width: 100%;
     height: 100%;
     background-color: black; /* 设置背景颜色为黑色 */
-    z-index: -2; /* 确保它在所有其他元素之下 */
+    z-index: -5; /* 确保它在所有其他元素之下 */
 }
 
 /* 全局光标设置 */
@@ -205,6 +218,7 @@
     height: 837px; /* 确保这个高度与你的canvas高度一致 */
     z-index: -0; /* 确保canvas位于其他元素之上 */
     pointer-events: none;
+    
     
     
 }
