--- a/CSS/style.css
+++ b/CSS/style.css
@@ -14,7 +14,7 @@
 }
 
 /* 边框和交互效果（.a 类） */
-.a, .b, .c, .d, .e, .f, .H, .I, .K, .M, .N, .O, .P, .Q, .R, .S, .T, .U ,.V {
+.a, .b, .c, .d, .e, .f, .H, .I, .K, .M, .N, .O, .P, .Q, .R, .S, .T, .U ,.V ,.W {
     position: absolute;
     box-shadow: inset 0 0 0 0.05px #000;
     background: linear-gradient(-45deg, #ee5252, #e73c7e, #23a6d5, #23d5ab, #3e05fa);
@@ -28,7 +28,7 @@
     height: 250px;
 }
 
-.a:hover, .b:hover, .c:hover, .d:hover, .e:hover, .f:hover, .H:hover, .I:hover, .K:hover, .M:hover, .N:hover, .O:hover, .P:hover, .Q:hover, .R:hover, .S:hover, .T:hover, .U:hover ,.V:hover {
+.a:hover, .b:hover, .c:hover, .d:hover, .e:hover, .f:hover, .H:hover, .I:hover, .K:hover, .M:hover, .N:hover, .O:hover, .P:hover, .Q:hover, .R:hover, .S:hover, .T:hover, .U:hover ,.V:hover ,.W:hover {
     width: 300px;
     height: 250px;
     background-color: #fff;
@@ -77,7 +77,7 @@
     left: 826px;
     transform: translate(-50%, -50%);
     position: fixed;
-    z-index: -0;
+    z-index: 6;
     pointer-events: none;
 }
 
@@ -151,7 +151,11 @@
     top: 2439px;
     font-family: 'SimpsonWave1995',sans-serif;
 }
-
+.W{
+    left: 8px;
+    top: 2744px;
+    font-family: 'WE NEVER',sans-serif;
+}
 
 .NOV {
     width: 0px;
@@ -261,6 +265,12 @@
 @font-face {
     font-family: 'AUTOMOTIVO BAYSIDE 2.0';
     src: url('./AUTOMOTIVO BAYSIDE 2.0.ttf') format('truetype');
+    font-weight: normal;
+    font-style: normal;
+}
+@font-face {
+    font-family: 'WE NEVER';
+    src: url('./WE NEVER.ttf') format('truetype');
     font-weight: normal;
     font-style: normal;
 }
